--- a/project_urlshort/templates/navbar.html
+++ b/project_urlshort/templates/navbar.html
@@ -7,7 +7,7 @@
         <ul>
             <li><a href="{% url 'speedylink:index' %}"><i class="fa fa-home fa-2x" aria-hidden="true"></i></a>
             </li>
-            <li><i class="fa fa-user fa-2x" aria-hidden="true"></i>
+            <li><a href="{% url 'speedylink:profile' %}"><i class="fa fa-user fa-2x" aria-hidden="true"></i></a>
             </li>
         </ul>
     </div>
