--- a/project_urlshort/speedylink/templates/speedylink/signin.html
+++ b/project_urlshort/speedylink/templates/speedylink/signin.html
@@ -5,8 +5,12 @@
 <main>
     <div id="content" class="signin_content">
         <h1>SpeedyLink</h1>
-        <form id="signin_form">
-            <input type="email" id="email" name="email" placeholder="Email" required>
+        <form id="signin_form" action="{% url 'speedylink:signin' %}" method="post">
+            {% csrf_token %}
+            {% if error == True %}
+            <p style="color: red;font-size: small;">Enter Correct Username,Password! Try Again</p>
+            {% endif %}
+            <input type="username" id="username" name="username" placeholder="Username" required>
             <input type="password" id="password" name="password" placeholder="Password" required>
             <input type="submit" value="Login" id="login">
         </form>
