--- a/project_urlshort/speedylink/templates/speedylink/signup.html
+++ b/project_urlshort/speedylink/templates/speedylink/signup.html
@@ -1,11 +1,15 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}SignIn{% endblock %}
+{% block title %}SignUp{% endblock %}
 {% block content %}
 <main>
     <div id="content" class="signup_content">
         <h1>SpeedyLink</h1>
-        <form id="signup_form">
+        <form id="signup_form" action="{% url 'speedylink:signup' %}" method="post">
+            {% csrf_token %}
+            {% if error == True %}
+            <p style="color: red;font-size: small;">Sign Up Error! Try Again</p>
+            {% endif %}
             <input type="text" id="username" name="username" placeholder="Username" required>
             <input type="email" id="email" name="email" placeholder="Email" required>
             <input type="password" id="password" name="password" placeholder="Password" required>
